# arcqueue-server

./: Cargo.toml  LICENSE  README  schema.sql
src/: arcades.rs  cli.rs  error.rs  main.rs  ping.rs  response.rs
src/handlers/: arcades.rs  cabinets.rs  mod.rs
src/handlers/v1/: arcades.rs  cabinets.rs  utils.rs
