[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kaiyang Wu <self@origincode.me>"]
description = "Arcade Queue Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time", "macros", "uuid"] }
uuid = { features = ["serde"] }
thiserror = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
